add page payment.html

--- a/cart.html
+++ b/cart.html
@@ -29,7 +29,7 @@
           <li class="page-header__menu-list-item"><a href="air-filters.html" class="link link--black">Воздушные</a></li>
           <li class="page-header__menu-list-item"><a href="index.html#index-shipping" class="link link--black">Доставка и оплата</a></li>
           <li class="page-header__menu-list-item"><a href="index.html#index-contacts" class="link link--black">Контакты</a></li>
-          <li class="page-header__menu-list-item page-header__menu-list-item--cart"><a>4 товара</a></li>
+          <li class="page-header__menu-list-item page-header__menu-list-item--cart"><a href="cart.html">4 товара</a></li>
           <li class="page-header__menu-list-item page-header__menu-list-item--contacts"><a href="tel:+77001286432">+7 700 128 64 32</a>
             <br>Работаем с 8:00 до 20:00</li>
         </ul>
@@ -80,7 +80,7 @@
             <h3 class="cart__head-title-text title title--h3">Ваша корзина</h3>
             <p class="cart__head-title-desc">4 товара на сумму 31 248 ₸</p>
           </div>
-          <a href="proccess.html" class="cart__head-btn btn">Оформить</a>
+          <a href="payment.html" class="cart__head-btn btn">Оформить</a>
         </div>
         <div class="cart__list">
           <div class="cart__list-item">
